--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
     <a-scene>
        
         <a-assets>
-            <img src='/static/308708684.jpg'>
+            <img id="SkyTexture" src='/static/daytime.jpg'>
         </a-assets>
         <a-sky src="#SkyTexture">   </a-sky>
         <a-box position="0 4 -6" color="red" heigh="1" width="1" depth="1">
